--- a/data/cards/00373085.yaml
+++ b/data/cards/00373085.yaml
@@ -44,36 +44,53 @@ atk: 800
 def: 200
 images:
 - index: 1
-  image: FirebrandHymnist-DUOV-EN-UR-1E.png
+  image: FirebrandHymnist-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: DUOV-EN028
     set_name: Duel Overload
     rarities:
     - Ultra Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN021
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: DUOV-DE028
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: SR14-DE021
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: DUOV-FR028
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: SR14-FR021
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: DUOV-IT028
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: SR14-IT021
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: DUOV-PT028
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: SR14-PT021
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: JF19-JP002
     set_name: Jump Festa Limited Pack 2019
