--- a/data/cards/03534077.yaml
+++ b/data/cards/03534077.yaml
@@ -44,7 +44,7 @@ series:
 - Coach
 images:
 - index: 1
-  image: CoachSoldierWolfbark-MAGO-EN-R-1E.png
+  image: CoachSoldierWolfbark-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: JOTL-EN093
@@ -59,9 +59,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN011
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: JOTL-DE093
     set_name: Judgment of the Light
@@ -75,6 +76,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SR14-DE011
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: JOTL-FR093
     set_name: Judgment of the Light
@@ -88,6 +93,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SR14-FR011
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: JOTL-IT093
     set_name: Judgment of the Light
@@ -101,6 +110,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SR14-IT011
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: JOTL-PT093
     set_name: Judgment of the Light
@@ -114,6 +127,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: SR14-PT011
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: VE08-JP003
     set_name: V Jump Edition 8
