--- a/data/cards/10045474.yaml
+++ b/data/cards/10045474.yaml
@@ -39,7 +39,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: InfiniteImpermanence-RA01-EN-SR-1E.png
+  image: InfiniteImpermanence-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: FLOD-EN077
@@ -80,9 +80,10 @@ sets:
     - Quarter Century Secret Rare
     - Ultimate Rare
     - Collector's Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN039
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: FLOD-DE077
     set_name: Flames of Destruction
@@ -122,6 +123,10 @@ sets:
     - Quarter Century Secret Rare
     - Ultimate Rare
     - Collector's Rare
+  - set_number: SR14-DE039
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: FLOD-FR077
     set_name: Flames of Destruction
@@ -161,6 +166,10 @@ sets:
     - Quarter Century Secret Rare
     - Ultimate Rare
     - Collector's Rare
+  - set_number: SR14-FR039
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: FLOD-IT077
     set_name: Flames of Destruction
@@ -200,6 +209,10 @@ sets:
     - Quarter Century Secret Rare
     - Ultimate Rare
     - Collector's Rare
+  - set_number: SR14-IT039
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: FLOD-PT077
     set_name: Flames of Destruction
@@ -239,6 +252,10 @@ sets:
     - Quarter Century Secret Rare
     - Ultimate Rare
     - Collector's Rare
+  - set_number: SR14-PT039
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: FLOD-JP077
     set_name: Flames of Destruction
