--- a/data/cards/13522325.yaml
+++ b/data/cards/13522325.yaml
@@ -47,7 +47,7 @@ images:
   image: SpiritofFlames-18TP-JP-C.png
   illustration: SpiritofFlames-MADU-JP-VG-artwork.png
 - index: '1.1'
-  image: SpiritofFlames-SGX1-EN-C-1E.png
+  image: SpiritofFlames-SR14-EN-C-1E.png
   illustration: SpiritofFlames-MADU-EN-VG-artwork.png
 sets:
   en:
@@ -63,9 +63,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN019
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   - set_number: LON-067
     set_name: Labyrinth of Nightmare
     rarities:
@@ -87,6 +88,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SR14-DE019
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: LDC-F067
     set_name: Labyrinth of Nightmare
@@ -98,6 +103,10 @@ sets:
     - Common
   - set_number: SGX1-FRH05
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SR14-FR019
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   it:
@@ -113,6 +122,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SR14-IT019
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: SDOK-PT016
     set_name: Onslaught of the Fire Kings Structure Deck
@@ -120,6 +133,10 @@ sets:
     - Common
   - set_number: SGX1-PTH05
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SR14-PT019
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
