--- a/data/cards/15033525.yaml
+++ b/data/cards/15033525.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 烈焰火星
 text:
   en: |-
-    While this card is in your hand or GY: You can banish 3 other monsters from your GY; Special Summon this card, also you cannot Special Summon other monsters for the rest of this turn. During your Main Phase 1: You can send all other monsters you control to the GY; inflict 500 damage to your opponent for each monster sent to the GY. You can only use each effect of "The Blazing Mars" once per turn.
+    While this card is in your hand or GY: You can banish 3 other monsters from your GY; Special Summon this card, also you cannot Special Summon other monsters for the rest of this turn. During your Main Phase 1: You can send all other monsters you control to the GY; inflict 500 damage to your opponent for each monster sent to the GY. You can only use this effect of "The Blazing Mars" once per turn.
   de: |-
     Solange sich diese Karte in deiner Hand oder deinem Friedhof befindet: Du kannst 3 andere Monster von deinem Friedhof verbannen; beschwöre diese Karte als Spezialbeschwörung, zusätzlich kannst du für den Rest dieses Spielzugs keine anderen Monster als Spezialbeschwörung beschwören. Während deiner Main Phase 1: Du kannst alle anderen Monster, die du kontrollierst, auf den Friedhof legen; füge deinem Gegner 500 Schaden für jedes auf den Friedhof gelegte Monster zu. Du kannst jeden Effekt von „Der flammende Mars“ nur einmal pro Spielzug verwenden.
   es: |-
@@ -44,7 +44,7 @@ series:
 - Legendary Planet
 images:
 - index: 1
-  image: TheBlazingMars-DLCS-EN-C-1E.png
+  image: TheBlazingMars-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: DRL3-EN007
@@ -55,9 +55,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN015
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: DRL3-DE007
     set_name: 'Dragons of Legend: Unleashed'
@@ -65,6 +66,10 @@ sets:
     - Secret Rare
   - set_number: DLCS-DE103
     set_name: 'Dragons of Legend: The Complete Series'
+    rarities:
+    - Common
+  - set_number: SR14-DE015
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   fr:
@@ -76,6 +81,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Common
+  - set_number: SR14-FR015
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: DRL3-IT007
     set_name: 'Dragons of Legend: Unleashed'
@@ -85,6 +94,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Common
+  - set_number: SR14-IT015
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: DRL3-PT007
     set_name: 'Dragons of Legend: Unleashed'
@@ -92,6 +105,10 @@ sets:
     - Secret Rare
   - set_number: DLCS-PT103
     set_name: 'Dragons of Legend: The Complete Series'
+    rarities:
+    - Common
+  - set_number: SR14-PT015
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
