--- a/data/cards/18621798.yaml
+++ b/data/cards/18621798.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 炎王兽 甘尼许
 text:
   en: |-
-    When a monster effect is activated while this monster is on the field (Quick Effect): You can negate the activation, and if you do, destroy 1 other FIRE monster in your hand or field. If this card is destroyed and sent to the GY: You can target 1 FIRE Beast, Beast-Warrior, or Winged Beast monster in your GY, except "Fire King Avatar Arvata"; Special Summon it, but it has its effects negated, also it is destroyed during the End Phase. You can only use each effect of "Fire King Avatar Arvata" once per turn.
+    When a monster effect is activated while this monster is on the field (Quick Effect): You can negate the activation, and if you do, destroy 1 other FIRE monster in your hand or face-up field. If this card is destroyed and sent to the GY: You can target 1 FIRE Beast, Beast-Warrior, or Winged Beast monster in your GY, except "Fire King Avatar Arvata"; Special Summon it, but negate its effects, also destroy it during the End Phase. You can only use each effect of "Fire King Avatar Arvata" once per turn.
   de: |-
     Wenn ein Monstereffekt aktiviert wird, solange dieses Monster auf dem Spielfeld liegt (Schnelleffekt): Du kannst die Aktivierung annullieren und falls du dies tust, zerstöre 1 anderes FEUER Monster in deiner Hand oder auf deiner Spielfeldseite. Falls diese Karte zerstört und auf den Friedhof gelegt wird: Du kannst 1 FEUER Ungeheuer-, Ungeheuer-Krieger- oder Geflügeltes Ungeheuer-Monster in deinem Friedhof wählen, außer „Feuerkönig Avatar Arvata“; beschwöre es als Spezialbeschwörung, aber seine Effekte bleiben annulliert, zusätzlich wird es während der End Phase zerstört. Du kannst jeden Effekt von „Feuerkönig Avatar Arvata“ nur einmal pro Spielzug verwenden.
   es: |-
@@ -45,36 +45,53 @@ series:
 - Fire King Avatar
 images:
 - index: 1
-  image: FireKingAvatarArvata-CIBR-EN-R-1E.png
+  image: FireKingAvatarArvata-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: CIBR-EN029
     set_name: Circuit Break
     rarities:
     - Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN047
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: CIBR-DE029
     set_name: Circuit Break
     rarities:
     - Rare
+  - set_number: SR14-DE047
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: CIBR-FR029
     set_name: Circuit Break
     rarities:
     - Rare
+  - set_number: SR14-FR047
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: CIBR-IT029
     set_name: Circuit Break
     rarities:
     - Rare
+  - set_number: SR14-IT047
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: CIBR-PT029
     set_name: Circuit Break
     rarities:
     - Rare
+  - set_number: SR14-PT047
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: CIBR-JP029
     set_name: Circuit Break
