--- a/data/cards/22993208.yaml
+++ b/data/cards/22993208.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 炎王的急袭
 text:
   en: |-
-    If your opponent controls a monster and you control no monsters: Special Summon 1 FIRE Beast, Beast-Warrior, or Winged Beast monster from your Deck. Its effects are negated, also it is destroyed during the End Phase. You can only activate 1 "Onslaught of the Fire Kings" per turn.
+    If only your opponent controls a monster: Special Summon 1 FIRE Beast, Beast-Warrior, or Winged Beast monster from your Deck, but its effects are negated, also destroy it during the End Phase. You can only activate 1 "Onslaught of the Fire Kings" per turn.
   de: |-
     Falls dein Gegner ein Monster kontrolliert und du keine Monster kontrollierst: Beschwöre 1 FEUER Ungeheuer-, Ungeheuer-Krieger- oder Geflügeltes Ungeheuer-Monster als Spezialbeschwörung von deinem Deck. Seine Effekte werden annulliert, zusätzlich wird es während der End Phase zerstört. Du kannst nur 1 „Ansturm der Feuerkönige“ pro Spielzug aktivieren.
   es: |-
@@ -40,7 +40,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: OnslaughtoftheFireKings-HISU-EN-SR-1E.png
+  image: OnslaughtoftheFireKings-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: SDOK-EN022
@@ -51,9 +51,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN026
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: SDOK-DE022
     set_name: Onslaught of the Fire Kings Structure Deck
@@ -63,6 +64,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: SR14-DE026
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: SDOK-FR022
     set_name: Onslaught of the Fire Kings Structure Deck
@@ -72,6 +77,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: SR14-FR026
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: SDOK-IT022
     set_name: Onslaught of the Fire Kings Structure Deck
@@ -81,6 +90,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: SR14-IT026
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: SDOK-PT022
     set_name: Onslaught of the Fire Kings Structure Deck
@@ -90,6 +103,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: SR14-PT026
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: SD24-JP022
     set_name: 'Structure Deck: Onslaught of the Fire Kings'
