--- a/data/cards/30741334.yaml
+++ b/data/cards/30741334.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3 Level 8 monsters
-    You can detach 1 Xyz Material from this card; draw 1 card and show it, then if it was a monster, inflict 800 damage to your opponent. You cannot conduct your Battle Phase the turn you activate this effect. You can only use this effect of "Coach King Giantrainer" up to thrice per turn.
+    You can detach 1 material from this card; draw 1 card and reveal it, then if it was a monster, inflict 800 damage to your opponent. You cannot conduct your Battle Phase the turn you activate this effect. You can only use this effect of "Coach King Giantrainer" up to thrice per turn.
   de: |-
     3 Monster der Stufe 8
     Du kannst 1 Xyz-Material von dieser Karte abhängen; ziehe 1 Karte und zeige sie, dann, falls es ein Monster war, füge deinem Gegner 800 Schaden zu. Du kannst in dem Spielzug, in dem du diesen Effekt aktivierst, keine Battle Phase durchführen. Du kannst diesen Effekt von „Coachkönig Riesentrainer“ nur bis zu dreimal pro Spielzug verwenden.
@@ -54,7 +54,7 @@ series:
 - Coach
 images:
 - index: 1
-  image: CoachKingGiantrainer-OP04-EN-C-UE.png
+  image: CoachKingGiantrainer-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: NUMH-EN037
@@ -65,9 +65,10 @@ sets:
     set_name: OTS Tournament Pack 4
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN041
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: NUMH-DE037
     set_name: Number Hunters
@@ -81,6 +82,10 @@ sets:
     set_name: OTS Tournament Pack 4
     rarities:
     - Common
+  - set_number: SR14-DE041
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: NUMH-FR037
     set_name: Number Hunters
@@ -88,6 +93,10 @@ sets:
     - Secret Rare
   - set_number: OP04-FR024
     set_name: OTS Tournament Pack 4
+    rarities:
+    - Common
+  - set_number: SR14-FR041
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   it:
@@ -99,6 +108,10 @@ sets:
     set_name: OTS Tournament Pack 4
     rarities:
     - Common
+  - set_number: SR14-IT041
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: NUMH-PT037
     set_name: Number Hunters
@@ -106,6 +119,10 @@ sets:
     - Secret Rare
   - set_number: OP04-PT024
     set_name: OTS Tournament Pack 4
+    rarities:
+    - Common
+  - set_number: SR14-PT041
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
