--- a/data/cards/42945701.yaml
+++ b/data/cards/42945701.yaml
@@ -41,7 +41,7 @@ series:
 - Spiritual Fire Art
 images:
 - index: 1
-  image: SpiritualFireArtKurenai-SDCH-EN-C-1E.png
+  image: SpiritualFireArtKurenai-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: CRV-EN052
@@ -56,9 +56,10 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN035
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   - set_number: DR04-EN052
     set_name: Dark Revelation Volume 4
     rarities:
@@ -76,6 +77,10 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: SR14-DE035
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: CRV-FR052
     set_name: Cybernetic Revolution
@@ -87,6 +92,10 @@ sets:
     - Common
   - set_number: SDCH-FR032
     set_name: 'Structure Deck: Spirit Charmers'
+    rarities:
+    - Common
+  - set_number: SR14-FR035
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   it:
@@ -102,6 +111,10 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: SR14-IT035
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: CRV-PT052
     set_name: Cybernetic Revolution
@@ -113,6 +126,10 @@ sets:
     - Common
   - set_number: SDCH-PT032
     set_name: 'Structure Deck: Spirit Charmers'
+    rarities:
+    - Common
+  - set_number: SR14-PT035
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
