--- a/data/cards/53797637.yaml
+++ b/data/cards/53797637.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 炎征龙-燃龙
 text:
   en: |-
-    You can discard this card AND 1 Dragon-Type or FIRE monster; Special Summon 1 "Blaster, Dragon Ruler of Infernos" from your Deck. It cannot attack this turn. You can only use the effect of "Burner, Dragon Ruler of Sparks" once per turn.
+    You can discard this card and 1 Dragon or FIRE monster; Special Summon 1 "Blaster, Dragon Ruler of Infernos" from your Deck, but it cannot attack this turn. You can only use this effect of "Burner, Dragon Ruler of Sparks" once per turn.
   de: |-
     Du kannst diese Karte und 1 FEUER Monster oder Monster vom Typ Drache abwerfen; beschwöre 1 „Blaster, Drachenherrscher der Infernos“ als Spezialbeschwörung von deinem Deck. Er kann in diesem Spielzug nicht angreifen. Du kannst den Effekt von „Burner, Drachenherrscher der Funken“ nur einmal pro Spielzug verwenden.
   es: |-
@@ -44,19 +44,24 @@ series:
 - Dragon Ruler
 images:
 - index: 1
-  image: BurnerDragonRulerofSparks-LTGY-EN-C-1E.png
+  image: BurnerDragonRulerofSparks-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: LTGY-EN097
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN009
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: LTGY-DE097
     set_name: Lord of the Tachyon Galaxy
+    rarities:
+    - Common
+  - set_number: SR14-DE009
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   fr:
@@ -64,14 +69,26 @@ sets:
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Common
+  - set_number: SR14-FR009
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: LTGY-IT097
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Common
+  - set_number: SR14-IT009
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: LTGY-PT097
     set_name: Lord of the Tachyon Galaxy
+    rarities:
+    - Common
+  - set_number: SR14-PT009
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
