--- a/data/cards/54149433.yaml
+++ b/data/cards/54149433.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 炎王兽 大鹏不死鸟
 text:
   en: |-
-    If a face-up "Fire King" monster you control is destroyed by card effect (except during the Damage Step): You can Special Summon this card from your hand. If this card in your possession is destroyed by an opponent's card and sent to your GY: You can Special Summon 1 "Fire King Avatar" monster from your Deck.
+    If a face-up "Fire King" monster(s) you control is destroyed by card effect (except during the Damage Step): You can Special Summon this card from your hand. If this card in your possession is destroyed by an opponent's card and sent to your GY: You can Special Summon 1 "Fire King Avatar" monster from your Deck.
   de: |-
     Falls ein offenes „Feuerkönig“-Monster, das du kontrollierst, durch einen Karteneffekt zerstört wird (außer während des Damage Steps): Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören. Falls diese Karte, die dir gehört, durch eine Karte deines Gegners zerstört (entweder durch Kampf oder durch einen Karteneffekt) und auf deinen Friedhof gelegt wird: Du kannst 1 „Feuerkönig Avatar“-Monster als Spezialbeschwörung von deinem Deck beschwören.
   es: |-
@@ -45,7 +45,7 @@ series:
 - Fire King Avatar
 images:
 - index: 1
-  image: FireKingAvatarGarunix-MP14-EN-C-1E.png
+  image: FireKingAvatarGarunix-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: LTGY-EN034
@@ -69,6 +69,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SR14-DE004
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: LTGY-FR034
     set_name: Lord of the Tachyon Galaxy
@@ -76,6 +80,10 @@ sets:
     - Common
   - set_number: MP14-FR020
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SR14-FR004
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   it:
@@ -87,6 +95,10 @@ sets:
     set_name: 2014 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: SR14-IT004
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: LTGY-PT034
     set_name: Lord of the Tachyon Galaxy
@@ -94,6 +106,10 @@ sets:
     - Common
   - set_number: MP14-PT020
     set_name: 2014 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: SR14-PT004
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
