--- a/data/cards/57103969.yaml
+++ b/data/cards/57103969.yaml
@@ -40,7 +40,7 @@ series:
 - Fire Formation
 images:
 - index: 1
-  image: FireFormationTenki-WISU-EN-R-1E.png
+  image: FireFormationTenki-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: CBLZ-EN059
@@ -85,9 +85,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN029
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   - set_number: FFSE-EN001
     set_name: 'Fire Fists: Special Edition'
     rarities:
@@ -135,6 +136,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SR14-DE029
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: CBLZ-FR059
     set_name: Cosmo Blazer
@@ -178,6 +183,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SR14-FR029
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: CBLZ-IT059
     set_name: Cosmo Blazer
@@ -221,6 +230,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SR14-IT029
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: CBLZ-PT059
     set_name: Cosmo Blazer
@@ -259,6 +272,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SR14-PT029
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: CBLZ-JP059
     set_name: Cosmo Blazer
