--- a/data/cards/57554544.yaml
+++ b/data/cards/57554544.yaml
@@ -15,9 +15,9 @@ name:
   zh-CN: 炎王的孤岛
 text:
   en: |-
-    If this face-up card in the Field Zone is sent to the Graveyard or banished: Destroy all monsters you control. You can only use 1 of the following effects of "Fire King Island" per turn, and only once that turn.
-    ● During your Main Phase: You can destroy 1 monster in your hand or you control, and if you do, add 1 "Fire King" monster from your Deck to your hand.
-    ● If you control no monsters: You can Special Summon 1 FIRE Winged Beast-Type monster from your hand.
+    If this face-up card in the Field Zone is sent to the GY or banished: Destroy all monsters you control. You can only use 1 of the following effects of "Fire King Island" per turn, and only once that turn.
+    ● During your Main Phase: You can destroy 1 monster in your hand or field, and if you do, add 1 "Fire King" monster from your Deck to your hand.
+    ● If you control no monsters: You can Special Summon 1 FIRE Winged Beast monster from your hand.
   de: |-
     Falls diese offene Karte in der Spielfeldzone auf den Friedhof gelegt oder verbannt wird: Zerstöre alle Monster, die du kontrollierst. Du kannst nur 1 der folgenden Effekte von „Insel des Feuerkönigs“ pro Spielzug verwenden und in dem Spielzug nur einmal.
     ●Während deiner Main Phase: Du kannst 1 Monster zerstören, das du in deiner Hand hast oder kontrollierst, und falls du dies tust, füge deiner Hand 1 „Feuerkönig“-Monster von deinem Deck hinzu.
@@ -52,19 +52,24 @@ series:
 - Fire King
 images:
 - index: 1
-  image: FireKingIsland-SHVI-EN-C-1E.png
+  image: FireKingIsland-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: SHVI-EN092
     set_name: Shining Victories
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN048
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: SHVI-DE092
     set_name: Shining Victories
+    rarities:
+    - Common
+  - set_number: SR14-DE048
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   fr:
@@ -72,14 +77,26 @@ sets:
     set_name: Shining Victories
     rarities:
     - Common
+  - set_number: SR14-FR048
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: SHVI-IT092
     set_name: Shining Victories
     rarities:
     - Common
+  - set_number: SR14-IT048
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: SHVI-PT092
     set_name: Shining Victories
+    rarities:
+    - Common
+  - set_number: SR14-PT048
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
