--- a/data/cards/61441708.yaml
+++ b/data/cards/61441708.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 奈芙提斯之凤凰神
 text:
   en: |-
-    Once per turn, during your next Standby Phase after this card was destroyed by a card effect and sent to the GY: Special Summon this card from the GY. If you do: Destroy all Spells and Traps on the field.
+    Once per turn, during your next Standby Phase after this card was destroyed by card effect and sent to the GY: Special Summon this card from the GY. If you do: Destroy all Spells and Traps on the field.
   de: |-
     Einmal pro Spielzug, während deiner nächsten Standby Phase, nachdem diese Karte durch einen Karteneffekt zerstört und auf den Friedhof gelegt wurde: Beschwöre diese Karte als Spezialbeschwörung vom Friedhof. Falls du dies tust: Zerstöre alle Zauber und Fallen auf dem Spielfeld.
   es: |-
@@ -44,7 +44,7 @@ series:
 - Nephthys
 images:
 - index: 1
-  image: SacredPhoenixofNephthys-HISU-EN-SR-1E.png
+  image: SacredPhoenixofNephthys-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: FET-EN005
@@ -76,9 +76,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN017
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   - set_number: DT06-EN009
     set_name: Duel Terminal 6a
     rarities:
@@ -113,6 +114,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: SR14-DE017
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: FET-FR005
     set_name: Flaming Eternity
@@ -139,6 +144,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: SR14-FR017
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: FET-IT005
     set_name: Flaming Eternity
@@ -165,6 +174,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: SR14-IT017
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: FET-PT005
     set_name: Flaming Eternity
@@ -179,6 +192,10 @@ sets:
     set_name: Hidden Summoners
     rarities:
     - Super Rare
+  - set_number: SR14-PT017
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: FET-JP005
     set_name: Flaming Eternity
