--- a/data/cards/67972302.yaml
+++ b/data/cards/67972302.yaml
@@ -94,6 +94,9 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: QCDB-JP030
+    set_name: Quarter Century Duelist Box
+    rarities:
   ko:
   - set_number: CYAC-KR027
     set_name: Cyberstorm Access
