--- a/data/cards/73304257.yaml
+++ b/data/cards/73304257.yaml
@@ -42,7 +42,7 @@ atk: 3000
 def: 2500
 images:
 - index: 1
-  image: AlphatheMasterofBeasts-RA01-EN-SR-1E.png
+  image: AlphatheMasterofBeasts-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: PHRA-EN023
@@ -64,9 +64,10 @@ sets:
     - Quarter Century Secret Rare
     - Ultimate Rare
     - Collector's Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN022
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: PHRA-DE023
     set_name: Phantom Rage
@@ -87,6 +88,10 @@ sets:
     - Quarter Century Secret Rare
     - Ultimate Rare
     - Collector's Rare
+  - set_number: SR14-DE022
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: PHRA-FR023
     set_name: Phantom Rage
@@ -107,6 +112,10 @@ sets:
     - Quarter Century Secret Rare
     - Ultimate Rare
     - Collector's Rare
+  - set_number: SR14-FR022
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: PHRA-IT023
     set_name: Phantom Rage
@@ -127,6 +136,10 @@ sets:
     - Quarter Century Secret Rare
     - Ultimate Rare
     - Collector's Rare
+  - set_number: SR14-IT022
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: PHRA-PT023
     set_name: Phantom Rage
@@ -147,6 +160,10 @@ sets:
     - Quarter Century Secret Rare
     - Ultimate Rare
     - Collector's Rare
+  - set_number: SR14-PT022
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: PHRA-JP023
     set_name: Phantom Rage
