--- a/data/cards/74845897.yaml
+++ b/data/cards/74845897.yaml
@@ -38,7 +38,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: Rekindling-MYFI-EN-SR-1E.png
+  image: Rekindling-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: ANPR-EN060
@@ -61,9 +61,10 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN028
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   - set_number: DT07-EN094
     set_name: Duel Terminal 7b
     rarities:
@@ -89,6 +90,10 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: SR14-DE028
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: ANPR-FR060
     set_name: Ancient Prophecy
@@ -110,6 +115,10 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: SR14-FR028
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: ANPR-IT060
     set_name: Ancient Prophecy
@@ -131,6 +140,10 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: SR14-IT028
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: SDOK-PT024
     set_name: Onslaught of the Fire Kings Structure Deck
@@ -144,6 +157,10 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: SR14-PT028
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: ANPR-JP060
     set_name: Ancient Prophecy
