--- a/data/cards/93332803.yaml
+++ b/data/cards/93332803.yaml
@@ -44,7 +44,7 @@ series:
 - Kaiju
 images:
 - index: 1
-  image: DogorantheMadFlameKaiju-SGX2-EN-C-1E.png
+  image: DogorantheMadFlameKaiju-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: CORE-EN087
@@ -68,9 +68,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN014
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: CORE-DE087
     set_name: Clash of Rebellions
@@ -93,6 +94,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SR14-DE014
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: CORE-FR087
     set_name: Clash of Rebellions
@@ -115,6 +120,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SR14-FR014
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: CORE-IT087
     set_name: Clash of Rebellions
@@ -137,6 +146,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SR14-IT014
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: CORE-PT087
     set_name: Clash of Rebellions
@@ -159,6 +172,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: SR14-PT014
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: EP16-JP021
     set_name: Extra Pack 2016
