--- a/data/cards/96746083.yaml
+++ b/data/cards/96746083.yaml
@@ -44,7 +44,7 @@ series:
 - True Draco
 images:
 - index: 1
-  image: TrueKingAgnimazudtheVanisher-SDSB-EN-C-1E.png
+  image: TrueKingAgnimazudtheVanisher-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: TDIL-EN025
@@ -59,9 +59,10 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN012
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: TDIL-DE025
     set_name: The Dark Illusion
@@ -73,6 +74,10 @@ sets:
     - Ultra Rare
   - set_number: SDSB-DE014
     set_name: 'Structure Deck: Soulburner'
+    rarities:
+    - Common
+  - set_number: SR14-DE012
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   fr:
@@ -88,6 +93,10 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: SR14-FR012
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: TDIL-IT025
     set_name: The Dark Illusion
@@ -101,6 +110,10 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: SR14-IT012
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: TDIL-PT025
     set_name: The Dark Illusion
@@ -112,6 +125,10 @@ sets:
     - Ultra Rare
   - set_number: SDSB-PT014
     set_name: 'Structure Deck: Soulburner'
+    rarities:
+    - Common
+  - set_number: SR14-PT012
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
