--- a/data/cards/16889337.yaml
+++ b/data/cards/16889337.yaml
@@ -102,6 +102,9 @@ sets:
     set_name: Tournament Pack 2023 Vol.1
     rarities:
     - Common
+  - set_number: QCDB-JP016
+    set_name: Quarter Century Duelist Box
+    rarities:
   ko:
   - set_number: SHSP-KR035
     set_name: Shadow Specters
