--- a/data/cards/38120068.yaml
+++ b/data/cards/38120068.yaml
@@ -38,7 +38,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: TradeIn-ANGU-EN-R-1E.png
+  image: TradeIn-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: SDRL-EN019
@@ -86,9 +86,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN031
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: SDRL-DE019
     set_name: Rise of the Dragon Lords Structure Deck
@@ -135,6 +136,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SR14-DE031
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: SDRL-FR019
     set_name: Rise of the Dragon Lords Structure Deck
@@ -181,6 +186,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SR14-FR031
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: SDRL-IT019
     set_name: Rise of the Dragon Lords Structure Deck
@@ -227,6 +236,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SR14-IT031
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: SDBE-PT024
     set_name: Saga of Blue-Eyes White Dragon Structure Deck
@@ -261,6 +274,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: SR14-PT031
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: SD13-JP018
     set_name: 'Structure Deck: Revival of the Great Dragon'
