--- a/data/cards/54040221.yaml
+++ b/data/cards/54040221.yaml
@@ -42,7 +42,7 @@ atk: 1700
 def: 1200
 images:
 - index: 1
-  image: RoyalFirestormGuards-SGX1-EN-C-1E.png
+  image: RoyalFirestormGuards-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: GLAS-EN087
@@ -66,9 +66,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN018
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: GLAS-DE087
     set_name: Gladiator's Assault
@@ -89,6 +90,10 @@ sets:
     - Shatterfoil Rare
   - set_number: SGX1-DEH11
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SR14-DE018
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   fr:
@@ -113,6 +118,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SR14-FR018
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: GLAS-IT087
     set_name: Gladiator's Assault
@@ -135,6 +144,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: SR14-IT018
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: SDOK-PT012
     set_name: Onslaught of the Fire Kings Structure Deck
@@ -147,6 +160,10 @@ sets:
     - Shatterfoil Rare
   - set_number: SGX1-PTH11
     set_name: 'Speed Duel GX: Duel Academy Box'
+    rarities:
+    - Common
+  - set_number: SR14-PT018
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
