--- a/data/cards/60718396.yaml
+++ b/data/cards/60718396.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 炎狱反击
 text:
   en: |-
-    When a Spell/Trap Card is activated: Banish 1 FIRE monster with 200 DEF from your Graveyard; negate the activation, and if you do, destroy it.
+    When a Spell/Trap Card is activated: Banish 1 FIRE monster with 200 DEF from your GY; negate the activation, and if you do, destroy it.
   de: |-
     Wenn eine Zauber-/Fallenkarte aktiviert wird: Verbanne 1 FEUER Monster mit 200 DEF von deinem Friedhof; annulliere die Aktivierung und falls du dies tust, zerstöre sie.
   es: |-
@@ -41,7 +41,7 @@ series:
 - Flamvell
 images:
 - index: 1
-  image: FlamvellCounter-SDOK-EN-C-1E.png
+  image: FlamvellCounter-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: ANPR-EN078
@@ -52,9 +52,10 @@ sets:
     set_name: Onslaught of the Fire Kings Structure Deck
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN034
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: ANPR-DE078
     set_name: Ancient Prophecy
@@ -62,6 +63,10 @@ sets:
     - Common
   - set_number: SDOK-DE032
     set_name: Onslaught of the Fire Kings Structure Deck
+    rarities:
+    - Common
+  - set_number: SR14-DE034
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   fr:
@@ -73,6 +78,10 @@ sets:
     set_name: Onslaught of the Fire Kings Structure Deck
     rarities:
     - Common
+  - set_number: SR14-FR034
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: ANPR-IT078
     set_name: Ancient Prophecy
@@ -82,9 +91,17 @@ sets:
     set_name: Onslaught of the Fire Kings Structure Deck
     rarities:
     - Common
+  - set_number: SR14-IT034
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: SDOK-PT032
     set_name: Onslaught of the Fire Kings Structure Deck
+    rarities:
+    - Common
+  - set_number: SR14-PT034
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
