--- a/data/cards/67234805.yaml
+++ b/data/cards/67234805.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 能力吸收石
 text:
   en: |-
-    Each time a monster effect is activated, place 1 Spellstone Counter on this card (max. 2). While this card has 2 Spellstone Counters, face-up monsters on the field cannot activate their effects, and their effects are negated. During each End Phase, remove all Spellstone Counters on this card.
+    Each time a monster effect is activated, place 1 Spellstone Counter on this card (max. 2). While this card has 2 Spellstone Counters, neither player can activate the effects of face-up monsters on the field, also the effects of face-up monsters on the field are negated. Once per turn, during the End Phase, if this card has any Spellstone Counters: Remove them.
   de: |-
     Jedes Mal, wenn ein Monstereffekt aktiviert wird, lege 1 Magischer-Stein-Zählmarke (max. 2) auf diese Karte. Solange diese Karte 2 Magischer-Stein-Zählmarken hat, können die Effekte von offenen Monstern auf dem Spielfeld nicht aktiviert werden und diese Effekte werden annulliert. Während jeder End Phase, entferne alle Magischer-Stein-Zählmarken von dieser Karte.
   es: |-
@@ -38,19 +38,24 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
-  image: PowersinkStone-STBL-EN-C-1E.jpg
+  image: PowersinkStone-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: STBL-EN078
     set_name: Starstrike Blast
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN040
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: STBL-DE078
     set_name: Starstrike Blast
+    rarities:
+    - Common
+  - set_number: SR14-DE040
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   fr:
@@ -58,9 +63,22 @@ sets:
     set_name: Starstrike Blast
     rarities:
     - Common
+  - set_number: SR14-FR040
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: STBL-IT078
     set_name: Starstrike Blast
+    rarities:
+    - Common
+  - set_number: SR14-IT040
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
+  pt:
+  - set_number: SR14-PT040
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
