--- a/data/cards/94016752.yaml
+++ b/data/cards/94016752.yaml
@@ -38,7 +38,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: HeraldoftheAbyss-MP19-EN-UR-1E.png
+  image: HeraldoftheAbyss-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: SOFU-EN063
@@ -53,9 +53,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Common
-  - set_number: SR14-EN???
+  - set_number: SR14-EN032
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: SOFU-DE063
     set_name: Soul Fusion
@@ -67,6 +68,10 @@ sets:
     - Ultra Rare
   - set_number: OP22-DE025
     set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
+  - set_number: SR14-DE032
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   fr:
@@ -82,6 +87,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Common
+  - set_number: SR14-FR032
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: SOFU-IT063
     set_name: Soul Fusion
@@ -95,6 +104,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Common
+  - set_number: SR14-IT032
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: SOFU-PT063
     set_name: Soul Fusion
@@ -106,6 +119,10 @@ sets:
     - Ultra Rare
   - set_number: OP22-PT025
     set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
+  - set_number: SR14-PT032
+    set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
   ja:
