--- a/data/cards/95169481.yaml
+++ b/data/cards/95169481.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 4 monsters
-    Once per turn: You can detach 1 Xyz Material from this card, then target 1 Beast, Beast-Warrior, or Winged Beast-Type monster you control and 1 other card on the field; destroy them.
+    Once per turn: You can detach 1 material from this card, then target 1 Beast, Beast-Warrior, or Winged Beast monster you control and 1 other card on the field; destroy them.
   de: |-
     2 Monster der Stufe 4
     Einmal pro Spielzug: Du kannst 1 Xyz-Material von dieser Karte abhängen und dann 1 Monster vom Typ Ungeheuer, Ungeheuer-Krieger oder Geflügeltes Ungeheuer, das du kontrollierst, und 1 andere Karte auf dem Spielfeld wählen; zerstöre sie.
@@ -53,7 +53,7 @@ def: 1200
 materials: 2 Level 4 monsters
 images:
 - index: 1
-  image: DiamondDireWolf-BP03-EN-SHR-1E.png
+  image: DiamondDireWolf-SR14-EN-C-1E.png
 sets:
   en:
   - set_number: CBLZ-EN051
@@ -68,9 +68,10 @@ sets:
     set_name: 'Battle Pack 3: Monster League'
     rarities:
     - Shatterfoil Rare
-  - set_number: SR14-EN???
+  - set_number: SR14-EN042
     set_name: 'Structure Deck: Fire Kings'
     rarities:
+    - Common
   de:
   - set_number: CBLZ-DE051
     set_name: Cosmo Blazer
@@ -84,6 +85,10 @@ sets:
     set_name: 'Battle Pack 3: Monster League'
     rarities:
     - Shatterfoil Rare
+  - set_number: SR14-DE042
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   fr:
   - set_number: CBLZ-FR051
     set_name: Cosmo Blazer
@@ -97,6 +102,10 @@ sets:
     set_name: 'Battle Pack 3: Monster League'
     rarities:
     - Shatterfoil Rare
+  - set_number: SR14-FR042
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   it:
   - set_number: CBLZ-IT051
     set_name: Cosmo Blazer
@@ -110,6 +119,10 @@ sets:
     set_name: 'Battle Pack 3: Monster League'
     rarities:
     - Shatterfoil Rare
+  - set_number: SR14-IT042
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   pt:
   - set_number: CBLZ-PT051
     set_name: Cosmo Blazer
@@ -123,6 +136,10 @@ sets:
     set_name: 'Battle Pack 3: Monster League'
     rarities:
     - Shatterfoil Rare
+  - set_number: SR14-PT042
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
+    - Common
   ja:
   - set_number: CBLZ-JP051
     set_name: Cosmo Blazer
