--- a/data/cards/33609262.yaml
+++ b/data/cards/33609262.yaml
@@ -8,7 +8,7 @@ name:
   it: Tenacia dei Monarchi
   pt: Tenacidade dos Monarcas
   ja: <ruby>帝<rt>てい</rt></ruby><ruby>王<rt>おう</rt></ruby>の<ruby>深<rt>しん</rt></ruby><ruby>怨<rt>えん</rt></ruby>
-  ja_romaji: Teiō no Shinen
+  ja_romaji: Teiō no Shin'en
   ko: 제왕의 심원
   ko_rr:
   zh-TW:
