--- a/data/cards/57182235.yaml
+++ b/data/cards/57182235.yaml
@@ -8,7 +8,7 @@ name:
   it: Grazie dei Token
   pt: Ação de Graças dos Tokens
   ja: トークン<ruby>収<rt>しゅう</rt></ruby><ruby>穫<rt>かく</rt></ruby><ruby>祭<rt>さい</rt></ruby>
-  ja_romaji: Tōken Shūkakusai
+  ja_romaji: Tōkun Shūkakusai
   ko: 토큰 수확축제
   ko_rr:
   zh-TW:
