--- a/data/cards/65305978.yaml
+++ b/data/cards/65305978.yaml
@@ -32,7 +32,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: FireKingSanctuary-SR14-JP-SR.png
+  image: File:FireKingSanctuary-SR14-EN-UR-1E.png
 sets:
   en:
   - set_number: SR14-EN024
