--- a/data/cards/02526224.yaml
+++ b/data/cards/02526224.yaml
@@ -36,7 +36,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: FireKingHighAvatarKirin-SR14-JP-SR.png
+  image: File:FireKingHighAvatarKirin-SR14-EN-UR-1E.png
 sets:
   en:
   - set_number: SR14-EN002
