--- a/data/cards/38910263.yaml
+++ b/data/cards/38910263.yaml
@@ -36,7 +36,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: FireKingAvatarRangbali-SR14-JP-SR.png
+  image: File:FireKingAvatarRangbali-SR14-EN-UR-1E.png
 sets:
   en:
   - set_number: SR14-EN003
