--- a/data/cards/66431519.yaml
+++ b/data/cards/66431519.yaml
@@ -36,7 +36,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: SacredFireKingGarunix-SR14-JP-UR.png
+  image: File:SacredFireKingGarunix-SR14-EN-UR-1E.png
 sets:
   en:
   - set_number: SR14-EN001
