--- a/data/cards/90681088.yaml
+++ b/data/cards/90681088.yaml
@@ -36,7 +36,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: LegendaryFireKingPonix-SR14-JP-SR.png
+  image: File:LegendaryFireKingPonix-SR14-EN-SR-1E.png
 sets:
   en:
   - set_number: SR14-EN045
