--- a/data/cards/91703676.yaml
+++ b/data/cards/91703676.yaml
@@ -32,7 +32,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: FireKingSkyBurn-SR14-JP-SR.png
+  image: File:FireKingSkyBurn-SR14-EN-SR-1E.png
 sets:
   en:
   - set_number: SR14-EN025
