--- a/data/cards/02526224.yaml
+++ b/data/cards/02526224.yaml
@@ -36,7 +36,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: File:FireKingHighAvatarKirin-SR14-EN-UR-1E.png
+  image: FireKingHighAvatarKirin-SR14-EN-UR-1E.png
 sets:
   en:
   - set_number: SR14-EN002
@@ -69,6 +69,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 992826
