--- a/data/cards/38798785.yaml
+++ b/data/cards/38798785.yaml
@@ -32,7 +32,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: File:EchelonoftheFireKings-SR14-EN-SR-1E.png
+  image: EchelonoftheFireKings-SR14-EN-SR-1E.png
 sets:
   en:
   - set_number: SR14-EN033
@@ -65,6 +65,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1002079
