--- a/data/cards/65305978.yaml
+++ b/data/cards/65305978.yaml
@@ -32,7 +32,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: File:FireKingSanctuary-SR14-EN-UR-1E.png
+  image: FireKingSanctuary-SR14-EN-UR-1E.png
 sets:
   en:
   - set_number: SR14-EN024
@@ -65,6 +65,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 992828
