--- a/data/cards/90681088.yaml
+++ b/data/cards/90681088.yaml
@@ -36,7 +36,7 @@ series:
 - Fire King
 images:
 - index: 1
-  image: File:LegendaryFireKingPonix-SR14-EN-SR-1E.png
+  image: LegendaryFireKingPonix-SR14-EN-SR-1E.png
 sets:
   en:
   - set_number: SR14-EN045
@@ -70,6 +70,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 1009556
